--- a/express-demo-bookstore/package.json
+++ b/express-demo-bookstore/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "config": "^3.0.1",
+    "debug": "^4.1.1",
     "express": "^4.16.4",
-    "joi": "^14.3.0"
+    "joi": "^14.3.0",
+    "morgan": "^1.9.1"
   }
 }
